[gd_scene load_steps=5 format=3 uid="uid://kwqbxaxv4ybw"]

[ext_resource type="Texture2D" uid="uid://by0xwpyv0c1bk" path="res://Assets/Character/guard.png" id="1_0arod"]
[ext_resource type="Script" path="res://Scripts/BattleTestScene.gd" id="1_0odng"]
[ext_resource type="Texture2D" uid="uid://bcb7mn4dp4wgh" path="res://Assets/Tileset/bigstone_path.png" id="2_2hyjv"]
[ext_resource type="PackedScene" uid="uid://32d47my2jm0o" path="res://Scenes/StatusBar.tscn" id="2_pe8r1"]

[node name="BattleTestScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0odng")

[node name="BigstonePath" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(384, 364)
scale = Vector2(4, 4)
texture = ExtResource("2_2hyjv")

[node name="Characters" type="Control" parent="."]
anchors_preset = 0

[node name="Blue" type="Control" parent="Characters"]
anchors_preset = 0

[node name="front_top" type="Sprite2D" parent="Characters/Blue"]
position = Vector2(324, 108)
texture = ExtResource("1_0arod")
flip_h = true

[node name="StatusBar" parent="Characters/Blue/front_top" instance=ExtResource("2_pe8r1")]
offset_left = -84.992
offset_top = -88.576
offset_right = -208.0
offset_bottom = -208.0
scale = Vector2(1, 1)

[node name="front_mid" type="Sprite2D" parent="Characters/Blue"]
position = Vector2(324, 304)
texture = ExtResource("1_0arod")
flip_h = true

[node name="StatusBar" parent="Characters/Blue/front_mid" instance=ExtResource("2_pe8r1")]
offset_left = -84.992
offset_top = -88.576
offset_right = -208.0
offset_bottom = -208.0
scale = Vector2(1, 1)

[node name="front_bot" type="Sprite2D" parent="Characters/Blue"]
position = Vector2(324, 500)
texture = ExtResource("1_0arod")
flip_h = true

[node name="StatusBar" parent="Characters/Blue/front_bot" instance=ExtResource("2_pe8r1")]
offset_left = -84.992
offset_top = -88.576
offset_right = -208.0
offset_bottom = -208.0
scale = Vector2(1, 1)

[node name="back_top" type="Sprite2D" parent="Characters/Blue"]
position = Vector2(128, 108)
texture = ExtResource("1_0arod")
flip_h = true

[node name="StatusBar" parent="Characters/Blue/back_top" instance=ExtResource("2_pe8r1")]
offset_left = -84.992
offset_top = -88.576
offset_right = -208.0
offset_bottom = -208.0
scale = Vector2(1, 1)

[node name="back_mid" type="Sprite2D" parent="Characters/Blue"]
position = Vector2(128, 304)
texture = ExtResource("1_0arod")
flip_h = true

[node name="StatusBar" parent="Characters/Blue/back_mid" instance=ExtResource("2_pe8r1")]
offset_left = -84.992
offset_top = -88.576
offset_right = -208.0
offset_bottom = -208.0
scale = Vector2(1, 1)

[node name="back_bot" type="Sprite2D" parent="Characters/Blue"]
position = Vector2(128, 500)
texture = ExtResource("1_0arod")
flip_h = true

[node name="StatusBar" parent="Characters/Blue/back_bot" instance=ExtResource("2_pe8r1")]
offset_left = -84.992
offset_top = -88.576
offset_right = -208.0
offset_bottom = -208.0
scale = Vector2(1, 1)

[node name="Red" type="Control" parent="Characters"]
layout_mode = 3
anchors_preset = 0

[node name="front_top" type="Sprite2D" parent="Characters/Red"]
position = Vector2(576, 108)
texture = ExtResource("1_0arod")

[node name="StatusBar" parent="Characters/Red/front_top" instance=ExtResource("2_pe8r1")]
offset_left = -84.992
offset_top = -88.576
offset_right = -208.0
offset_bottom = -208.0
scale = Vector2(1, 1)

[node name="front_mid" type="Sprite2D" parent="Characters/Red"]
position = Vector2(576, 304)
texture = ExtResource("1_0arod")

[node name="StatusBar" parent="Characters/Red/front_mid" instance=ExtResource("2_pe8r1")]
offset_left = -84.992
offset_top = -88.576
offset_right = -208.0
offset_bottom = -208.0
scale = Vector2(1, 1)

[node name="front_bot" type="Sprite2D" parent="Characters/Red"]
position = Vector2(576, 500)
texture = ExtResource("1_0arod")

[node name="StatusBar" parent="Characters/Red/front_bot" instance=ExtResource("2_pe8r1")]
offset_left = -84.992
offset_top = -88.576
offset_right = -208.0
offset_bottom = -208.0
scale = Vector2(1, 1)

[node name="back_top" type="Sprite2D" parent="Characters/Red"]
position = Vector2(772, 108)
texture = ExtResource("1_0arod")

[node name="StatusBar" parent="Characters/Red/back_top" instance=ExtResource("2_pe8r1")]
offset_left = -84.992
offset_top = -88.576
offset_right = -208.0
offset_bottom = -208.0
scale = Vector2(1, 1)

[node name="back_mid" type="Sprite2D" parent="Characters/Red"]
position = Vector2(772, 304)
texture = ExtResource("1_0arod")

[node name="StatusBar" parent="Characters/Red/back_mid" instance=ExtResource("2_pe8r1")]
offset_left = -84.992
offset_top = -88.576
offset_right = -208.0
offset_bottom = -208.0
scale = Vector2(1, 1)

[node name="back_bot" type="Sprite2D" parent="Characters/Red"]
position = Vector2(772, 500)
texture = ExtResource("1_0arod")

[node name="StatusBar" parent="Characters/Red/back_bot" instance=ExtResource("2_pe8r1")]
offset_left = -84.992
offset_top = -88.576
offset_right = -208.0
offset_bottom = -208.0
scale = Vector2(1, 1)

[node name="Console" type="Panel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 585.0
offset_right = 1269.0
offset_bottom = 712.0

[node name="RichTextLabel" type="RichTextLabel" parent="Console"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 1259.0
offset_bottom = 171.0

[node name="CharacterInfo" type="Panel" parent="."]
layout_mode = 0
offset_left = 872.0
offset_top = 11.0
offset_right = 1263.0
offset_bottom = 572.0

[node name="Sprite2D" type="Sprite2D" parent="CharacterInfo"]
position = Vector2(73, 70)
texture = ExtResource("1_0arod")

[node name="NameLabel" type="Label" parent="CharacterInfo"]
layout_mode = 0
offset_left = 151.0
offset_top = 12.0
offset_right = 380.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 30
text = "角色名称"

[node name="StatusRichTextLabel" type="RichTextLabel" parent="CharacterInfo"]
layout_mode = 0
offset_left = 24.0
offset_top = 136.0
offset_right = 385.0
offset_bottom = 450.0

[node name="System" type="Control" parent="."]
process_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="System"]
layout_mode = 0
offset_left = 894.0
offset_top = 520.0
offset_right = 1243.0
offset_bottom = 560.0

[node name="TurnLabel" type="Label" parent="System/HBoxContainer"]
layout_mode = 2
text = "当前回合数：XX"

[node name="PauseButton" type="CheckButton" parent="System/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "暂停"

[node name="OptionButton" type="OptionButton" parent="System/HBoxContainer"]
layout_mode = 2
item_count = 1
